RESOLVED FIXED300169
REGRESSION(300989@main): Broke Internal visionOS builds
https://bugs.webkit.org/show_bug.cgi?id=300169
Summary REGRESSION(300989@main): Broke Internal visionOS builds
Jonathan Bedard
Reported 2025-10-04 07:32:19 PDT
300989@main broke Internal visionOS builds.
Attachments
Jonathan Bedard
Comment 1 2025-10-04 07:32:25 PDT
Jonathan Bedard
Comment 2 2025-10-04 07:33:43 PDT
EWS
Comment 3 2025-10-04 07:38:41 PDT
Committed 300999@main (1f3712d7e238): <https://commits.webkit.org/300999@main> Reviewed commits have been landed. Closing PR #51808 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.