REGRESSION(300989@main): Broke Internal visionOS builds https://bugs.webkit.org/show_bug.cgi?id=300169 rdar://161954644

Unreviewed build fix.

* Source/WebCore/Modules/model-element/HTMLModelElement.cpp:

Canonical link: https://commits.webkit.org/300999@main